--- a/meta/main.yml
+++ b/meta/main.yml
@@ -79,6 +79,7 @@ galaxy_info:
     - pushgateway
     - snmp
     - statsd
+    - beanstalkd
     - tgroup
 
 # List your role dependencies here, one per line. Be sure to remove the '[]' above,
