--- a/tasks/beanstalkd_exporter.yml
+++ b/tasks/beanstalkd_exporter.yml
@@ -21,7 +21,7 @@
   set_fact:
     prometheus_software_config_name: '{{ prometheus_software_name }}'
     prometheus_software_opts:
-      - '--web.listen-address={{ prometheus_software_host }}:{{ prometheus_software_port }} --beanstalkd.address={{ prometheus_software_host }}:11300'
+      - '--web.listen-address={{ prometheus_software_host }}:{{ prometheus_software_port }}'
 
 - name: Include task to perform installation of {{ prometheus_software_name_version }}
   include_tasks: _install.yml
